[package]
name = "myco-controller"
version = "0.1.0"
authors = ["Lara Bärtschi <info@lara.ninja>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
embedded-hal = "1.0.0"
nrf52840-hal = "0.17.1"
nrf52840-pac = "0.12.2"
panic-halt = "0.2.0"

[lints.clippy]
enum_glob_use = "warn"
unwrap_used = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
debug = true      # Symbols do not require space in flash
